# CMakeForDummies

./: README.md
01-basic/01-single-sourcefile/: CMakeLists.txt  README.md  main.cpp
01-basic/02-multiple-sources-and-headerfile/: CMakeLists.txt  README.md  hello.cpp  hello.h  main.cpp
01-basic/03-subdirectories/: CMakeLists.txt
01-basic/03-subdirectories/hello-exe/: CMakeLists.txt  main.cpp
01-basic/03-subdirectories/say-hello/: CMakeLists.txt
01-basic/04-real-example/: CMakeLists.txt
01-basic/04-real-example/src/: CMakeLists.txt  main.cpp
01-basic/04-real-example/src/PopulationManager/: CMakeLists.txt  PopulationManager.cpp  PopulationManager.h
01-basic/single-sourcefile/: README.md
